--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
         <div class="container-fluid main-bar">
             <div class="nav">
                 <div class="row p-2">
-                    <div class="col-md-1 col-sm-2"><img src="img/logo.png" alt="" class="logo"></div>
+                    <div class="col-md-1 col-sm-2"><a href="index.html"><img src="img/logo.png" alt="" class="logo"></a></div>
                     <div class="col-md-6 col-sm-12">
                         <ul>
-                            <li><a href="#" style="background-color: red;">SALE</a></li>
-                            <li><a href="#">SẢN PHẨM</a></li>
-                            <li><a href="#">THỂ THAO</a></li>
-                            <li><a href="#">ĐỒ LÓT</a></li>
-                            <li><a href="#">PHỤ KIỆN</a></li>
-                            <li><a href="#">IN LOGO</a></li>
+                            <li><a class="menu-list " href="#" style="background-color: red;">SALE</a></li>
+                            <li><a class="menu-list " href="danhSachSanPham.html">SẢN PHẨM</a></li>
+                            <li><a class="menu-list " href="#">THỂ THAO</a></li>
+                            <li><a class="menu-list " href="#">ĐỒ LÓT</a></li>
+                            <li><a class="menu-list " href="#">PHỤ KIỆN</a></li>
+                            <li><a class="menu-list " href="#">IN LOGO</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 col-12">
@@ -75,8 +75,8 @@
                     </div>
                     <div class="col-md-2 col-12">
                         <div class="row right-menu">
-                            <a href="#">GIỎ HÀNG</a>
-                            <a href="#">ĐĂNG NHẬP</a>
+                            <a href="#" class="menu-list" >GIỎ HÀNG</a>
+                            <a href="#" class="menu-list" >ĐĂNG NHẬP</a>
                         </div>
                     </div>
                 </div>
@@ -181,13 +181,13 @@
 
     <!--Áo-->
     <section>
-        <div class="section-style">
+        <div class="section-style" style="background-image: linear-gradient(rgb(0, 52, 155),rgb(91, 156, 255),white,rgb(91, 156, 255),rgb(2, 62, 204),rgb(0, 136, 255));">
             <div class="container-fluid">
                 <div class="container-section">
-                    <div style="margin-bottom: 20px; font-size: 30px; font-weight: bold;">ÁO NAM</div>
+                    <div style="margin-bottom: 20px; font-size: 35px; font-weight: bold; color: white;">ÁO NAM</div>
 
                     <div class="row container-ao-img" style="position: relative;">
-                        <a href="#"><img src="img/ao/ao-banner.png" alt="" style="width: 100%;"></a>
+                        <a href="#"><img src="img/ao/ao-banner.png" alt="" style="width: 100%; border-radius: 10px;"></a>
                     </div>
 
                     <div class="row card-style">
@@ -261,7 +261,7 @@
                                     <img src="img/ao/ao-5.avif" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <a href="#">
-                                            <h4>Áo Polo Ngắn Tay Phối Xanh</h4>
+                                            <h4>Áo Polo Ngắn Tay Phối Xanh Thời Thượng</h4>
                                             <div style="font-size: 13px; color: rgba(115, 115, 115, 0.596);">
                                                 M X XL XXL
                                             </div>
